更新组件，重构代码